g: fix actions spacing

--- a/tw-code/c0-Base-Style.css
+++ b/tw-code/c0-Base-Style.css
@@ -237,7 +237,7 @@ ul.actions li {
 }
 
 ul.actions > li:not(:first-child),
-ul.actions > span[data-name="mtl"]:not(:first-child) {
+ul.actions > span:not(:first-child) li {
   margin-top: 1rem;
 }
 
